working on distances

--- a/backend/templates/practice.html
+++ b/backend/templates/practice.html
@@ -48,4 +48,5 @@
   }
   </script>
   <script src = "{{url_for('static', filename='JS/webCamParse.js')}}"></script>
+  <script src = "{{url_for('static', filename='JS/detect_movement.js')}}"></script>
 </html>
