data posting to backend

--- a/backend/templates/practice.html
+++ b/backend/templates/practice.html
@@ -28,9 +28,8 @@
      <canvas id='thecanvas' width='400' height="400" ></canvas>
      <div id="output">
        <img alt="Thumbnail to process" id="thumb" hidden>
-       <p id="stats"> </p>
-     </div> -->
-     <video id="video" autoplay muted="true" position="relative" width="320" height="240"></video>
+         </div> -->
+     <video id="video" autoplay muted="true" position="relative" width="320" height="240" ></video>
 
      <p>
 
@@ -39,6 +38,8 @@
      </p>
      <canvas id="canvas" ></canvas>
 
+
+     <p id='stats'></p>
   </body>
 
   <!-- the webcam control scrip -->
