working on adding start button

--- a/backend/templates/practice.html
+++ b/backend/templates/practice.html
@@ -38,7 +38,12 @@
      </p>
      <canvas id="canvas" ></canvas>
 
-
+     <form action='/start' method="post">
+       <div class="slidecontainer">
+        <input type="range" min="0" max="3" value="1" class="slider" id="MOVEMENT_THRESHOLD" step=.2>
+      </div>
+      <input type="submit" Value="start">
+    </form>
      <p id='stats'></p>
   </body>
 
