--- a/backend/templates/practice.html
+++ b/backend/templates/practice.html
@@ -62,6 +62,7 @@
       });
   }
   </script> -->
+  <script src = "{{url_for('static', filename='JS/globals.js')}}"></script>
   <script src = "{{url_for('static', filename='JS/index.js')}}"></script>
   <script src = "{{url_for('static', filename='JS/detect_movement.js')}}"></script>
 </html>
