--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>CVTheraminPython Function Finder</title>
+        <title>CVTheramin</title>
+        <script
+  src="https://code.jquery.com/jquery-3.5.1.min.js"
+  integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+  crossorigin="anonymous"></script>
         <link rel="stylesheet" type="text/css" href="{{url_for('static',filename='style.css')}}">
+        <script type="text/javascript"
+                src="{{url_for('static',filename='main.js')}}"></script>
     </head>
     <div class=page>
       {{ svg|safe }}
