distance calculations updates

--- a/backend/templates/practice.html
+++ b/backend/templates/practice.html
@@ -40,7 +40,7 @@
 
 
        <div class="slidecontainer">
-        <input type="range" min="0" max="3" value="1" class="slider" id="MOVEMENT_THRESHOLD" step=.2>
+        <input type="range" min="0" max="3" value=".6" class="slider" id="MOVEMENT_THRESHOLD" step=.2>
       </div>
       <button id="startButton" type="button"> Start </button>
       <button id="stopButton" type="button"> Stop </button>
