--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -7,10 +7,20 @@
   integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
   crossorigin="anonymous"></script>
         <link rel="stylesheet" type="text/css" href="{{url_for('static',filename='style.css')}}">
-        <script type="text/javascript"
-                src="{{url_for('static',filename='main.js')}}"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@magenta/music@^1.0.0"></script>
+        <script>
+        $(function(){
+            $("#IMG_4845").on("click",function(){ window.location="/about"; });
+            $("#godance").on("click",function(){ window.location="/play"; });
+            $("#e_site").on("click",function(){ window.open("httsp://evysite","_blank"); });
+            $("#path351").on("click",function(){window.location="/remix";});
+        });
+        </script>
+
     </head>
-    <div class=page>
-      {{ svg|safe }}
-    </div>
+    
+      <div class=page>
+        {{ svg|safe }}
+      </div>
+    
 </html>
