--- a/backend/templates/practice.html
+++ b/backend/templates/practice.html
@@ -54,8 +54,14 @@
        <button id = "stop" type="button" onclick="mediaRecorder.stop()">Stop</button>
        <button id = "upload" type = "button"> Upload</button>
      </div>
+     <div>
+        {{svg|safe}}
+     </div>
   </body>
 
+  <script type="text/javascript"
+          src="{{url_for('static',filename='main.js')}}"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@magenta/music@^1.0.0"></script>
   <script src = "{{url_for('static', filename='JS/globals.js')}}"></script>
   <script src = "{{url_for('static', filename='JS/index.js')}}"></script>
   <script src = "{{url_for('static', filename='JS/detect_movement.js')}}"></script>
